--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    text-decoration: znone;
+    text-decoration: none;
     font-family: sans-serif;
     font-size: 14px;
 }
